--- a/backend/app/views/users/new.html.erb
+++ b/backend/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
 <div id="unit-form" class="clearfix container-fluid centered-card" >
-  <h3>Create New User</h3>
+  <h3>Sign Up</h3>
   <%= render 'form' %>
 </div>
