--- a/backend/app/views/users/passwords/edit.html.erb
+++ b/backend/app/views/users/passwords/edit.html.erb
@@ -1,21 +1,25 @@
-<div id="change-password" class="centered-card clearfix">
-  <div>Change your password</div>
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => {:method => :put}) do |f| %>
-    <%= render :partial =>'layouts/form_errors', :object => resource.errors %>
+<h2>Change your password</h2>
 
-    <%= f.hidden_field :reset_password_token, :value => @token %>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+  <%= devise_error_messages! %>
+  <%= f.hidden_field :reset_password_token %>
 
-    <div class = "clearfix"><%= f.label :password, "New password", :class => "Ulabel" %>
-      <%= f.password_field :password, :autofocus => true , :class => "password-field" %>
-    </div>
+  <div class="field">
+    <%= f.label :password, "New password" %><br />
+    <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+    <% end %>
+    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+  </div>
 
-    <div class = "clearfix"><%= f.label :password_confirmation, "Confirm new password", :class => "Ulabel" %>
-      <%= f.password_field :password_confirmation , :class => "password-field" %>
-    </div>
+  <div class="field">
+    <%= f.label :password_confirmation, "Confirm new password" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  </div>
 
-    <div class = "clearfix">
-      <%= f.submit "Change my password" , :class => "mbutton" %>
-    </div>
+  <div class="actions">
+    <%= f.submit "Change my password" %>
+  </div>
+<% end %>
 
-  <% end %>
-</div>
+<%= render "users/shared/links" %>
