--- a/backend/app/assets/stylesheets/application.css.scss
+++ b/backend/app/assets/stylesheets/application.css.scss
@@ -19,8 +19,7 @@
 @import "common/form";
 @import "app_base";
 @import "app_header";
-@import "breadcrumbs";
-@import "breadcrumbs_and_help";
+@import "secret_codes";
 @import "list_and_search";
 @import "login_page";
 @import "modal";
