--- a/backend/app/assets/stylesheets/application.css.scss
+++ b/backend/app/assets/stylesheets/application.css.scss
@@ -19,9 +19,6 @@
 @import "common/form";
 @import "app_base";
 @import "app_header";
-@import "breadcrumbs";
-@import "breadcrumbs_and_help";
-@import "list_and_search";
+@import "secret_codes";
 @import "login_page";
-@import "modal";
 @import "password";
