--- a/backend/app/assets/stylesheets/secret_codes.css.scss
+++ b/backend/app/assets/stylesheets/secret_codes.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the SecretCodes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.code-form{
+	padding-top: 1%;
+	padding-bottom: 1%;
+	padding-left: 1%;
+}
+
+.manage-section{
+	min-height: 400px;
+	margin-top: 20px;
+	padding: 15px;
+	background: white;
+	overflow: auto;
+	.table{
+		margin-top: 10px;
+	}
+}
