--- a/backend/app/views/secret_codes/index.html.erb
+++ b/backend/app/views/secret_codes/index.html.erb
@@ -1,28 +1,39 @@
+<div class="manage-section">
 <% if can? :read, @secret_code %>
 <p id="notice"><%= notice %></p>
 <% if can? :create, @secret_code %>
 <%= render 'form' %>
 <% end %>
-<h1>Listing Secret Codes</h1>
+<h1>Listing Secret Codes(<%= @secret_codes.count rescue 0 %>)</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Code</th>
-      <th>User registered</th>
-    </tr>
-  </thead>
+<div class="manage-section">
+  <section class="results">
+    <div class="container">
+      <% if @secret_codes.present? %>
+      <table class="table  table-bordered">
+        <thead>
+          <tr>
+            <th>Code</th>
+            <th>User registered</th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @secret_codes.each do |secret_code| %>
-      <tr>
-        <td><%= secret_code.code %></td>
-        <td><%= secret_code.user.email rescue nil %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @secret_codes.each do |secret_code| %>
+          <tr>
+            <td><%= secret_code.code %></td>
+            <td><%= secret_code.user.email rescue nil %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<br>
+      <br>
 
-<% end %>
+      <% end %>
+      <% else %>
+      <h4><%= "No record found" %></h4>
+      <% end %>
+    </div>
+  </section>
+</div>
