imported from bitbucket

--- a/backend/app/assets/stylesheets/application.css.scss
+++ b/backend/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,9 @@
 @import "common/form";
 @import "app_base";
 @import "app_header";
-@import "secret_codes";
+@import "breadcrumbs";
+@import "breadcrumbs_and_help";
+@import "list_and_search";
 @import "login_page";
+@import "modal";
 @import "password";
