--- a/backend/app/views/users/index.html.erb
+++ b/backend/app/views/users/index.html.erb
@@ -1,30 +1,51 @@
 <div class="manage-section">
  <% if @users.present? %>
- <h1>All Users</h1>
- <table class="table table-bordered">
-  <thead>
+  <h1>All Users</h1>
+  <%= form_tag users_path, :method => 'get', :id => "units_search" do %>
+      <p>
+        <%= text_field_tag :search_name, params[:search_name],placeholder: "User Name",:class=>"U-search" %>
+        <%= text_field_tag :search_uid, params[:search_uid],placeholder: "User uid",:class=>"U-search" %>
+        <%= submit_tag "Search", :Name => nil,:class=>"U-searchB btn btn-primary" %>
+      </p>
+  <% end %>
+<%= link_to "NEW USER", new_user_path,:class=>"U-button btn btn-primary" %>
+  <table class="table table-bordered">
+    <thead>
     <tr>
-      <th>UID</th>
-      <th>Name</th>
-      <th>Email_Id</th>
-      <th>Status</th>
-      <th colspan = "3">Actions</th>
-    </tr>
-  </thead>
-  <% @users.each do |u| %>
-  <tbody>
-    <tr>
-      <td><%= u.uid%></td>
+    <th>UID</th>
+    <th>Name</th>
+    <th>Email_Id</th>
+    <th>Status</th>
+    <th colspan = "3">Actions</th>
+   </tr>
+    </thead>
+    <% @users.each do |u| %>
+     <tbody>
+      <tr>
+        <td><%= u.uid%></td>
 
-      <td><%= u.fullname %></td>
+    <td><%= u.fullname %></td>
 
-      <td><%= u.email %></td>
-      <td><%= u.status%></td>
-      <td><%= link_to "SHOW" , user_path(u),:class=>"btn btn-primary" %></td>
-      <td><%= link_to "EDIT" , edit_user_path(u),:class=>"btn btn-danger" %></td>
-    </tr>
-    <% end %>
-  </tbody>
+    <td><%= u.email %></td>
+        <td><%= u.status%></td>
+        <td><%= link_to "SHOW" , user_path(u),:class=>"btn btn-primary" %></td>
+    <td><%= link_to "EDIT" , edit_user_path(u),:class=>"btn btn-danger" %></td>
+  </tr>
+      <% end %>
+    </tbody>
 </table>
-<% end %>
+  <% else %>
+  <%= form_tag users_path, :method => 'get', :id => "units_search" do %>
+      <p>
+        <%= text_field_tag :search_name, params[:search_name],placeholder: "User Name",:class=>"U-search" %>
+        <%= text_field_tag :search_uid, params[:search_uid],placeholder: "User uid",:class=>"U-search" %>
+        <%= submit_tag "Search", :Name => nil,:class=>"U-searchB btn btn-primary" %>
+      </p>
+  <% end %>
+  <%= link_to "NEW USER", new_user_path,:class=>"U-button btn btn-primary" %>
+  <%= link_to "BACK", users_path,:class=>"U-button btn btn-primary" %>
+
+  <h4>No User found  for search <%=params[:search]%></h4>
+
+ <% end %>
 </div>
